content/docs/v2020.07.08-beta.0/reference/cli/kubectl-stash_create_repository.md
---
title: Create Repository
menu:
  docs_v2020.07.08-beta.0:
    identifier: kubectl-stash-create-repository
    name: Create Repository
    parent: reference-cli
menu_name: docs_v2020.07.08-beta.0
section_menu_id: reference
info:
  catalog: v2020.07.08-beta.0
  cli: v0.10.0-beta.0
  version: v2020.07.08-beta.0
---

## kubectl-stash create repository

Create a new repository

### Synopsis

Create a new Repository using Backend Credential

```
kubectl-stash create repository [flags]
```

### Examples

```
  # Create a new repository
  stash create repository --namespace=<namespace> <repository-name> [Flag]
  stash create repository gcs-repo --namespace=demo --secret=gcs-secret --bucket=appscode-qa --prefix=/source/data --provider=gcs
```

### Options

```
      --bucket string         Name of the cloud bucket/container
      --endpoint string       Endpoint for s3/s3 compatible backend
  -h, --help                  help for repository
      --max-connections int   Specify maximum concurrent connections for GCS, Azure and B2 backend
      --prefix string         Prefix denotes the directory inside the backend
      --provider string       Backend provider (i.e. gcs, s3, azure etc)
      --secret string         Name of the Storage Secret
```

### Options inherited from parent commands

```
      --alsologtostderr                  log to standard error as well as files
      --as string                        Username to impersonate for the operation
      --as-group stringArray             Group to impersonate for the operation, this flag can be repeated to specify multiple groups.
      --cache-dir string                 Default HTTP cache directory (default "/home/runner/.kube/http-cache")
      --certificate-authority string     Path to a cert file for the certificate authority
      --client-certificate string        Path to a client certificate file for TLS
      --client-key string                Path to a client key file for TLS
      --cluster string                   The name of the kubeconfig cluster to use
      --context string                   The name of the kubeconfig context to use
      --enable-analytics                 Send analytical events to Google Analytics (default true)
      --insecure-skip-tls-verify         If true, the server's certificate will not be checked for validity. This will make your HTTPS connections insecure
      --kubeconfig string                Path to the kubeconfig file to use for CLI requests.
      --log-backtrace-at traceLocation   when logging hits line file:N, emit a stack trace (default :0)
      --log-dir string                   If non-empty, write log files in this directory
      --log-flush-frequency duration     Maximum number of seconds between log flushes (default 5s)
      --logtostderr                      log to standard error instead of files
      --match-server-version             Require server version to match client version
  -n, --namespace string                 If present, the namespace scope for this CLI request
      --request-timeout string           The length of time to wait before giving up on a single server request. Non-zero values should contain a corresponding time unit (e.g. 1s, 2m, 3h). A value of zero means don't timeout requests. (default "0")
  -s, --server string                    The address and port of the Kubernetes API server
      --stderrthreshold severity         logs at or above this threshold go to stderr
      --tls-server-name string           Server name to use for server certificate validation. If it is not provided, the hostname used to contact the server is used
      --token string                     Bearer token for authentication to the API server
      --use-kubeapiserver-fqdn-for-aks   if true, uses kube-apiserver FQDN for AKS cluster to workaround https://github.com/Azure/AKS/issues/522 (default true)
      --user string                      The name of the kubeconfig user to use
  -v, --v Level                          log level for V logs
      --vmodule moduleSpec               comma-separated list of pattern=N settings for file-filtered logging
```

### SEE ALSO

* [kubectl-stash create](/docs/v2020.07.08-beta.0/reference/cli/kubectl-stash_create)	 - create stash resources

